Fix alignment of checkout cart button. Set username state when user logs in. Fix checkout price total not updating when user removes from cart.

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -40,7 +40,3 @@
 .inputStyle {
   width: 50 !important;
 }
-
-.cartButton {
-  margin-left: 20px !important;
-}
